<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuanLyNhanSuActivity">

    //khung 1

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        //họ và tên"

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblName" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
        </LinearLayout>

        //radiobutton

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblBangCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblBangCap" />

            <RadioGroup
                android:id="@+id/rdoGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rad1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdoTC">

                </RadioButton>

                <RadioButton
                    android:id="@+id/rad2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdoCD">

                </RadioButton>

                <RadioButton
                    android:id="@+id/rad3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdoDH">

                </RadioButton>
            </RadioGroup>
        </LinearLayout>
        //sở thích

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblSoThich"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblSoThich" />

            <CheckBox
                android:id="@+id/chkA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chkDocSach" />

            <CheckBox
                android:id="@+id/chkB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chkXemPhim" />
        </LinearLayout>

        //khác

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblKhac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblKhac" />

            <EditText
                android:id="@+id/edtKhac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="33dp"
                android:singleLine="true" />
        </LinearLayout>

    </LinearLayout>

    //khung 2

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <ListView
            android:id="@+id/lstNhanSu"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    //khung 3

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        //button

        <Button
            android:id="@+id/btnThem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@color/colorbtn"
            android:text="@string/btnThem"
            android:textAllCaps="false">

        </Button>

        <Button
            android:id="@+id/btnThoat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorbtn"
            android:text="@string/btnThoat"
            android:textAllCaps="false">

        </Button>

    </LinearLayout>


</LinearLayout>